force-app/main/default/objects/Injury__c/Injury__c.object-meta.xml
<CustomObject>
    <description>Blessure / pathologie liée à un athlète (Medical 360, RTP).</description>
    <label>Injury</label>
    <nameField>
        <label>Injury Number</label>
        <type>AutoNumber</type>
        <displayFormat>INJ-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Injuries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>