force-app/main/default/objects/Injury__c/fields/ActualReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ActualReturnDate__c</fullName>
    <label>Actual Return Date</label>
    <type>Date</type>
</CustomField>