force-app/main/default/objects/Injury__c/fields/Athlete__c.field-meta.xml
<CustomField>
    <fullName>Athlete__c</fullName>
    <label>Athlete</label>
    <referenceTo>Athlete__c</referenceTo>
    <relationshipLabel>Injuries</relationshipLabel>
    <relationshipName>Injuries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>