force-app/main/default/objects/Injury__c/fields/BodyZone__c.field-meta.xml
<CustomField>
    <fullName>BodyZone__c</fullName>
    <label>Body Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>