force-app/main/default/objects/Injury__c/fields/ClinicalSummary__c.field-meta.xml
<CustomField>
    <fullName>ClinicalSummary__c</fullName>
    <label>Clinical Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>