force-app/main/default/objects/Injury__c/fields/ExpectedReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedReturnDate__c</fullName>
    <label>Expected Return (competition)</label>
    <type>Date</type>
</CustomField>