force-app/main/default/objects/Injury__c/fields/InjuryDate__c.field-meta.xml
<CustomField>
    <fullName>InjuryDate__c</fullName>
    <label>Injury Date</label>
    <type>Date</type>
</CustomField>