force-app/main/default/objects/Injury__c/fields/RecurrenceNote__c.field-meta.xml
<CustomField>
    <fullName>RecurrenceNote__c</fullName>
    <label>Recurrence Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>